--- a/src/staff/index.html
+++ b/src/staff/index.html
@@ -132,34 +132,46 @@
           These are our current Staff members:
         </p>
         <div style="margin-left:10px">
-          <img src="https://minotar.net/avatar/carlgo11/90.png">
+          <img src="https://minotar.net/helm/carlgo11/90.png">
           <p>
             [Owner] Carlgo11
           </p>
           <br>
-          <img src="https://minotar.net/avatar/jonkanon03/90.png">
+          <img src="https://minotar.net/helm/olback/90.png">
           <p>
-            [Co-Owner] [Maintainance-Staff] Jonkanon03
+            [Owner] Olback
           </p>
           <br>
-          <img src="https://minotar.net/avatar/olback/90.png">
+          <img src="https://minotar.net/helm/jonkanon03/90.png">
           <p>
-            [Head-Admin] Olback
+            [Co-Owner] Jonkanon03
           </p>
           <br>
-          <img src="https://minotar.net/avatar/rassjo/90.png">
+          <img src="https://minotar.net/helm/8404Heather/90.png">
           <p>
-            [Admin] Rassjo
+            [Moderator] 8404Heather
           </p>
           <br>
-          <img src="https://minotar.net/avatar/cabbex/90.png">
+          <img src="https://minotar.net/helm/101sierra101/90.png">
           <p>
-            [Admin] Cabbex
+            [Moderator] 101sierra101
           </p>
           <br>
+          <img src="https://minotar.net/helm/mixis221/90.png">
           <p>
-            (No moderators are displayed on this page since it would be too long.)
+            [Moderator] mixis221
           </p>
+          <br>
+          <img src="https://minotar.net/helm/cabbex/90.png">
+          <p>
+            [Moderator] Cabbex
+          </p>
+          <br>
+          <img src="https://minotar.net/helm/Pahlos/90.png">
+          <p>
+            [Moderator] Pahlos
+          </p>
+          <br>
         </div>
       </div>
     </div>
