--- a/src/index.html
+++ b/src/index.html
@@ -122,10 +122,10 @@
         <img src="http://puu.sh/47nYK.png" div="" width="500" class="pull-right">
         <div class="form-group">
           <label style="margin-top:20px">
-            Server IP
+            Server IP:
           </label>
           <br>
-          <input type="text" value="mc.PortalCraft.se" class="form" disabled="">
+          <input type="text" value="mc.portalcraft.se" class="form" disabled="">
         </div>
       </div>
     </div>
@@ -134,8 +134,8 @@
         <center>
           <p>
             The PortalCraft.se Servers are owned by Carlgo11. ©
-            <a href="http://www.carlgo11.com/">Carlgo11</a>
-            2013
+            <a href="http://www.carlgo11.com/">Carlgo11</a> 
+            2013 <a href="http://www.carlgo11.com/"><img src="http://www.gravatar.com/avatar/36b879e053d02c2c92d232eba14ffb3d?s=14"></a>
           </p>
         </center>
       </div>
