--- a/src/staff/index.html
+++ b/src/staff/index.html
@@ -183,7 +183,7 @@
           <p>
             The PortalCraft.se Servers are owned by Carlgo11. ©
             <a href="http://www.carlgo11.com/">Carlgo11</a>
-            2013
+            2013 <a href="http://www.carlgo11.com/"><img src="http://www.gravatar.com/avatar/36b879e053d02c2c92d232eba14ffb3d?s=14"></a>
           </p>
         </center>
       </div>
