--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,10 @@
     rel="stylesheet">
     <link href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0-rc2/css/bootstrap-glyphicons.css"
     rel="stylesheet">
+    <link rel="icon" href="./media/favicon.ico" type="image/vnd.microsoft.icon" />
   </head>
   
-  <body background="http://puu.sh/47mFP.jpg">
+  <body background="./media/bg.jpg">
     <div class="container" style="margin-top:20px">
       <div class="navbar navbar-inverse" id="RandomKITTENMeny">
         <div class="navbar-inner">
@@ -119,7 +120,7 @@
         </font>
       </div>
       <div id="RIGHT" class="pull-right" style="margin-top:20px;margin-right:20px;margin-bottom:100px">
-        <img src="http://puu.sh/47nYK.png" div="" width="500" class="pull-right">
+        <img src="./media/mpic.png" div="" width="500" class="pull-right">
         <div class="form-group">
           <label style="margin-top:20px">
             Server IP:
