--- a/src/staff/index.html
+++ b/src/staff/index.html
@@ -13,9 +13,10 @@
     rel="stylesheet">
     <link href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0-rc2/css/bootstrap-glyphicons.css"
     rel="stylesheet">
+    <link rel="icon" href="./media/favicon.ico" type="image/vnd.microsoft.icon" />
   </head>
   
-  <body background="http://puu.sh/47mFP.jpg">
+  <body background="./media/bg.jpg">
     <div class="container" style="margin-top:20px">
       <div class="navbar navbar-inverse" id="RandomKITTENMeny">
         <div class="navbar-inner">
@@ -104,8 +105,6 @@
               * Be responsible and never break the rules.
               <br>
               * Be nice to everyone
-              <br>
-              * Never ask for a higher rank! (Asking will increse your chanses by 50%)
             </p>
           </div>
           <div>
@@ -119,7 +118,7 @@
       <div id="RIGHT" style="margin-right:20px">
         <div style="margin-top:20px">
         </div>
-        <img src="http://puu.sh/486OL.jpg" div="" width="300" class="pull-right">
+        <img src="./media/bankey.jpg" div="" width="300" class="pull-right">
       </div>
       <br>
       <div id="Staff-Members" style="margin-top:281px">
