Cleanup + moved /staff/ to staff.html

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
               <a href="http://forum.portalcraft.se/">Forum</a>
             </li>
             <li>
-              <a href="./staff">Staff</a>
+              <a href="./staff.html">Staff</a>
             </li>
             <li>
               <a href="#">Rules</a>
