--- a/src/staff.html
+++ b/src/staff.html
@@ -26,7 +26,7 @@
           </div>
           <ul class="nav nav-pills">
             <li>
-              <a href="http://www.portalcraft.se">Home</a>
+              <a href="./">Home</a>
             </li>
             <li>
               <a href="http://forum.portalcraft.se/">Forum</a>
