Replaced "Contact" tab with "Live Map"

--- a/src/index.html
+++ b/src/index.html
@@ -43,22 +43,8 @@
             <li>
               <a href="https://www.facebook.com/portalcraft.se">Facebook</a>
             </li>
-            <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" href="#">Contact<div class="caret"></div></a>
-              <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-                <li>
-                  <a tabindex="-1" href="http://bit.ly/portalcraftirc">IRC</a>
-                </li>
-                <li>
-                  <a tabindex="-1" href="mailto:support@portalcraft.se">Mail us</a>
-                </li>
-                <li>
-                  <a tabindex="-1" href="mailto:apply@portalcraft.se?subject=Aplication for Moderator&amp;body=Hello! I'd like to apply for Moderator. Here's my apply:%0A%0AReal Name:%0AAge:%0AMinecraft-name:%0AServers you've been moderator/Admin on before (OP or owner doesn't count):%0AWhy you'd like to become Moderator:%0AServers you're banned on:%0AHave you read the rules:%0AAnything else you think we should know about you:">Apply for moderator</a>
-                </li>
-                <li>
-                  <a tabindex="-1" href="mailto:support@portalcraft.se?Subject:Feature Request">Feature/Plugin request</a>
-                </li>
-              </ul>
+            <li>
+              <a href="http://map.portalcraft.se">Live map</a>
             </li>
             <li>
               <a href="http://mc.portalcraft.se/log/log.txt">Server Logs</a>
