--- a/src/staff.html
+++ b/src/staff.html
@@ -45,25 +45,11 @@
             <li>
               <a href="https://www.facebook.com/portalcraft.se">Facebook</a>
             </li>
-            <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" href="#">Contact<div class="caret"></div></a>
-              <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-                <li>
-                  <a tabindex="-1" href="#">IRC</a>
-                </li>
-                <li>
-                  <a tabindex="-1" href="mailto:support@portalcraft.se">Mail us</a>
-                </li>
-                <li>
-                  <a tabindex="-1" href="mailto:apply@portalcraft.se?subject=Aplication for Moderator&amp;body=Hello! I'd like to apply for Moderator. Here's my apply:%0A%0AReal Name:%0AAge:%0AMinecraft-name:%0AServers you've been moderator/Admin on before (OP or owner doesn't count):%0AWhy you'd like to become Moderator:%0AServers you're banned on:%0AHave you read the rules:%0AAnything else you think we should know about you:">Apply for moderator</a>
-                </li>
-                <li>
-                  <a tabindex="-1" href="mailto:support@portalcraft.se?Subject:Feature Request">Feature request</a>
-                </li>
-              </ul>
+            <li>
+              <a href="http://map.portalcraft.se">Live map</a>
             </li>
             <li>
-              <a href="http://www.portalcraft.se/log/">Server Logs</a>
+              <a href="http://mc.portalcraft.se/log/log.txt">Server Logs</a>
             </li>
             <li>
               <a href="http://portalcraftse.buycraft.net/">Webshop</a>
@@ -169,6 +155,11 @@
           <img src="https://minotar.net/helm/Pahlos/90.png">
           <p>
             [Moderator] Pahlos
+          </p>
+          <br>
+          <img src="https://minotar.net/helm/flamehawk33/90.png">
+          <p>
+            [Moderator] flamehawk33
           </p>
           <br>
         </div>
