--- a/src/staff.html
+++ b/src/staff.html
@@ -162,6 +162,11 @@
             [Moderator] flamehawk33
           </p>
           <br>
+          <img src="https://minotar.net/helm/ianfreeman/90.png">
+          <p>
+            [Moderator] ianfreeman
+          </p>
+          <br>
         </div>
       </div>
     </div>
