Added a banappeal page

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
               <a href="./staff.html">Staff</a>
             </li>
             <li>
-              <a href="#">Rules</a>
+              <a href="./banappeal.html">Ban Appeal</a>
             </li>
             <li>
               <a href="https://twitter.com/portalcraft_se">Twitter</a>
@@ -119,7 +119,7 @@
           <p>
             The PortalCraft.se Servers are owned by Carlgo11. ©
             <a href="http://www.carlgo11.com/">Carlgo11</a> 
-            2013 <a href="http://www.carlgo11.com/"><img src="http://www.gravatar.com/avatar/36b879e053d02c2c92d232eba14ffb3d?s=14"></a>
+            2014 <a href="http://www.carlgo11.com/"><img src="http://www.gravatar.com/avatar/36b879e053d02c2c92d232eba14ffb3d?s=14"></a>
           </p>
         </center>
       </div>
