--- a/src/staff.html
+++ b/src/staff.html
@@ -37,7 +37,7 @@
               <a href="#">Staff</a>
             </li>
             <li>
-              <a href="#">Rules</a>
+              <a href="./banappeal.html">Ban Appeal</a>
             </li>
             <li>
               <a href="https://twitter.com/portalcraft_se">Twitter</a>
@@ -124,11 +124,6 @@
             [Owner] Olback
           </p>
           <br>
-          <img src="https://minotar.net/helm/jonkanon03/90.png">
-          <p>
-            [Co-Owner] Jonkanon03
-          </p>
-          <br>
           <img src="https://minotar.net/helm/8404Heather/90.png">
           <p>
             [Moderator] 8404Heather
@@ -165,7 +160,7 @@
           <p>
             The PortalCraft.se Servers are owned by Carlgo11. ©
             <a href="http://www.carlgo11.com/">Carlgo11</a>
-            2013 <a href="http://www.carlgo11.com/"><img src="http://www.gravatar.com/avatar/36b879e053d02c2c92d232eba14ffb3d?s=14"></a>
+            2014 <a href="http://www.carlgo11.com/"><img src="http://www.gravatar.com/avatar/36b879e053d02c2c92d232eba14ffb3d?s=14"></a>
           </p>
         </center>
       </div>
