--- a/src/staff/index.html
+++ b/src/staff/index.html
@@ -13,10 +13,10 @@
     rel="stylesheet">
     <link href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0-rc2/css/bootstrap-glyphicons.css"
     rel="stylesheet">
-    <link rel="icon" href="./media/favicon.ico" type="image/vnd.microsoft.icon" />
+    <link rel="icon" href="../media/favicon.ico" type="image/vnd.microsoft.icon" />
   </head>
   
-  <body background="./media/bg.jpg">
+  <body background="../media/bg.jpg">
     <div class="container" style="margin-top:20px">
       <div class="navbar navbar-inverse" id="RandomKITTENMeny">
         <div class="navbar-inner">
@@ -26,7 +26,7 @@
           </div>
           <ul class="nav nav-pills">
             <li>
-              <a href="./">Home</a>
+              <a href="../">Home</a>
             </li>
             <li>
               <a href="http://forum.portalcraft.se/">Forum</a>
@@ -37,7 +37,7 @@
               <a href="#">Staff</a>
             </li>
             <li>
-              <a href="./banappeal.html">Ban Appeal</a>
+              <a href="../banappeal/">Ban Appeal</a>
             </li>
             <li>
               <a href="https://twitter.com/portalcraft_se">Twitter</a>
@@ -101,7 +101,7 @@
       <div id="RIGHT" style="margin-right:20px">
         <div style="margin-top:20px">
         </div>
-        <img src="./media/bankey.jpg" div="" width="300" class="pull-right">
+        <img src="../media/bankey.jpg" div="" width="300" class="pull-right">
       </div>
       <br>
       <div id="Staff-Members" style="margin-top:281px">
@@ -149,22 +149,15 @@
             [Moderator] ianfreeman
           </p>
           <br>
+          <img src="https://minotar.net/helm/x10cool/90.png">
+          <p>
+            [Moderator] x10cool
+          </p>
+          <br>
         </div>
       </div>
     </div>
-    <font face="Georgia, Arial, Garamond">
-    </font>
-    <div id="footer">
-      <div style="margin-top:20px;color:white">
-        <center>
-          <p>
-            The PortalCraft.se Servers are owned by Carlgo11. ©
-            <a href="http://www.carlgo11.com/">Carlgo11</a>
-            2014 <a href="http://www.carlgo11.com/"><img src="http://www.gravatar.com/avatar/36b879e053d02c2c92d232eba14ffb3d?s=14"></a>
-          </p>
-        </center>
-      </div>
-    </div>
+    <? include '../resources/footer.php'; ?>
   </body>
 
 </html>
